ui/overlord-rtgov-ui-base/src/main/webapp/css/rtgov-ui.css
body {
  background-color: #eaeaea;
}

#page .closed {
  display: none;
}

.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

.underline {
  text-decoration: underline;
}

.emphasis {
  font-weight: bold;
  font-style: italic;
}

.divider-20 {
  margin-top: 10px;
  margin-bottom: 10px;
}

a {
  cursor: pointer;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

.spinner {
  background-image: url("../images/spinner_16.gif");
  background-position: top left;
  background-repeat: no-repeat;
  padding-left: 20px;
}

.btn-focus {
  color: #2da0db;
  text-shadow: 0px 1px 0px white;
}
.btn-focus:hover {
  color: #2da0db;
}
.btn-focus[disabled]:hover {
  color: rgb(51, 51, 51);
}

.btn-hover {
  visibility: hidden;
}

.btn-clear {
  padding: 5px 0px 5px 0px;
  width: 100%;
}

.btn-filter {
  padding: 5px 0px 5px 0px;
  margin-bottom: 8px;
  width: 100%;
}

input.filter-date {
  cursor: pointer;
  background-color: white;
}

.sp4n-label {
  text-shadow: 0px 1px 0px white;
  padding: 4px 12px;
  line-height: 20px;
  display: inline;
}

.filter-label {
  cursor: default;
}

.overlord-tabs {
  margin-bottom: 0px;
}
.tab-content {
  padding-top: 15px;
  background-color: white;
  border-left: 1px solid rgb(221, 221, 221);
  border-right: 1px solid rgb(221, 221, 221);
  border-bottom: 1px solid rgb(221, 221, 221);
}

.growl-dialog {
  position: fixed;
  z-index: 1000;
  width: 400px;
  background-color: white;
  border: 1px solid rgba(0, 0, 0, 0.4);
  border-radius: 4px 4px 2px 2px;
  outline: 0px none;
  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.4);
  background-clip: padding-box;
}
.growl-dialog-error {
  color: #d00000;
}
.growl-dialog-hover {
  background-color: #fefefe;
  border: 1px solid rgba(0, 0, 0, 0.6);
  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.5);
}
.growl-dialog-header {
  padding: 3px 8px;
  background-color: rgb(245, 245, 245);
  background-image: url("../images/modal-header-bg.png");
  background-position: bottom left;
  background-repeat: repeat-x;
  border-radius: 6px 6px 0px 0px;
  border-bottom: 1px solid rgb(223, 223, 223);
}
.growl-dialog-header-title {
  font-size: 13px;
  font-weight: bold;
}
.growl-dialog-body {
  position: relative;
  max-height: 200px;
  padding: 8px;
  overflow-y: auto;
  line-height: normal;
  font-size: 12px;
}

.input-name {
  width: 95%;
}
.input-value {
  width: 95%;
}

.hero-unit {
  background-color: transparent;
  border-bottom: 1px solid rgb(187, 187, 187);
  border-radius: 0px;
}

.breadcrumb {
  border: 1px solid rgb(211, 211, 211);
  background-image: url("../images/gradient-bg.png");
  background-position: bottom left;
  background-repeat: repeat-x;
}

.breadcrumb .active {
  font-weight: bold;
}

.table-striped tbody tr:nth-child(2n) td, .table-striped tbody tr:nth-child(2n) th {
  background-color: white;
}

.tooltip-inner {
  background-color: #666;
  color: #fafafa;
  text-shadow: 0px 1px 0px black;
}

.tooltip.in {
  opacity: 1.0;
}

.tooltip.top .tooltip-arrow {
  border-top-color: #666;
}
.tooltip.right .tooltip-arrow {
  border-right-color: #666;
}
.tooltip.left .tooltip-arrow {
  border-left-color: #666;
}
.tooltip.bottom .tooltip-arrow {
  border-bottom-color: #666;
}

footer {
  color: #666;
  text-shadow: 0px 1px 0px white;
  margin-bottom: 10px;
}

footer p {
  margin: 0px;
  padding: 0px;
}

footer hr {
  border-bottom: 1px solid #bbb;
}

.situation-details .nav-tabs {
  border-left: 1px solid rgb(221, 221, 221);
  border-right: 1px solid rgb(221, 221, 221);
}
.situation-details .nav-tabs li a {
  color: #666;
  border-radius: 0px;
  border-top: 0px;
  border-left: 0px;
  border-right: 1px solid rgb(221, 221, 221);
  border-bottom: 1px solid rgb(221, 221, 221);
  margin-right: 0px;
  background-color: rgb(234, 234, 234);
}
.situation-details .nav-tabs li a:hover {
  border-right: 1px solid rgb(221, 221, 221);
  background-color: rgb(234, 234, 234);
  color: #007ca3;
}
.situation-details .nav-tabs li.active a, .situation-details .nav-tabs li.active a:hover, .situation-details .nav-tabs li.active a:focus {
  border-top: 0px;
  border-left: 0px;
  border-right: 1px solid rgb(221, 221, 221);
  background-color: white;
}
.situation-details .nav-tabs li.active a {
  border-bottom: 1px solid white;
}

.source-editor-wrapper {
  background-color: #fff8f8;
  position: relative;
  height: 350px;
  border: 1px solid rgb(221, 221, 221);
  margin-bottom: 15px;
}

.source-editor {
  left: 0px;
  top: 0px;
  bottom: 1px;
  right: 1px;
  background: white;
}

.situation-details #details {
  padding-bottom: 20px;
}

.situation-details #message {
  padding-bottom: 15px;
}
.situation-details #message .message-meta-data-section-header {
  float: none;
  margin-top: 15px;
  padding-bottom: 15px;
}
.situation-details #message .message-meta-data-section-value {
  border: 1px solid rgb(221, 221, 221);
  margin-top: 10px;
  padding: 8px;
  width: 90%;
}

.modal-header {
  padding: 1px 15px;
  background-color: #f5f5f5;
  background-image: url("../images/modal-header-bg.png");
  background-position: bottom left;
  background-repeat: repeat-x;
  border-radius: 6px 6px 0px 0px;
  border-bottom: 1px solid #dfdfdf;
}
.modal-header h4 {
  font-size: 110%;
  text-shadow: 0px 1px 0px white;
}
.modal-header .close {
  margin-top: 10px;
}

.filter-sidebar {
  border: 1px solid rgb(211, 211, 211);
}

.filter-inner {
  padding: 9px 15px 0px;
}

.filter-header {
  text-indent: 15px;
  background-color: rgb(31, 151, 216);
}
.filter-header a {
  padding-top: 5px;
  color: white;
  margin-top: 3px;
  margin-bottom: 3px;
}
.filter-header span.caret {
  color: white;
  margin-top: 8px;
  margin-right: 8px;
  border-top: 4px solid white;
}

.action-sidebar {
  border: 1px solid rgb(211, 211, 211);
}

.action-inner {
  padding: 9px 15px 0px;
}

.action-header {
  text-indent: 15px;
  background-color: rgb(31, 151, 216);
}
.action-header a {
  padding-top: 5px;
  color: white;
  margin-top: 3px;
  margin-bottom: 3px;
}
.action-header span.caret {
  color: white;
  margin-top: 8px;
  margin-right: 8px;
  border-top: 4px solid white;
}

.services {
  padding: 0px;
}

.overlord-actions {
  border: 1px solid rgb(211, 211, 211);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  background-image: url("../images/gradient-bg.png");
  background-position: left bottom;
  background-repeat: repeat-x;
  background-color: rgb(242, 242, 242);
  padding: 10px;
}
.overlord-details-actions {
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 0px;
  padding-right: 0px;
}

.overlord-none, .overlord-searching {
  float: left;
  width: 100%;
  background-color: white;
  border-left: 1px solid rgb(211, 211, 211);
  border-right: 1px solid rgb(211, 211, 211);
  border-bottom: 1px solid rgb(211, 211, 211);
  margin-bottom: 20px;
}
.overlord-searching span {
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 36px;
  float: left;
  background-position: 16px 11px;
}
.overlord-none span {
  padding: 10px;
  float: left;
  font-style: italic;
}

.overlord-table {
  border-left: 1px solid rgb(211, 211, 211);
  border-right: 1px solid rgb(211, 211, 211);
  border-bottom: 1px solid rgb(211, 211, 211);
}
.overlord-standalone-table {
  border-top: 1px solid rgb(211, 211, 211);
}

.overlord-table thead th, .overlord-table tbody td {
  border-left: 1px solid rgb(211, 211, 211);
}
.overlord-table thead th {
  background-color: white;
}
.overlord-standalone-table thead th {
  background-color: rgb(31, 151, 216);
  color: white;
  text-shadow: 1px 1px 3px #444;
}

.sortable-column-header {
  color: rgb(0, 85, 128);
}
.sortable-column-icon {
  font-size: 8px;
  color: rgb(0, 85, 128);
}

.details-icon {
  margin-left: 10px;
  margin-top: 5px;
  float: left;
}

.details-title {
  font-weight: bold;
  font-size: 16px;
  text-shadow: 1px 1px 2px rgb(170, 170, 170);
  padding-right: 15px;
}

.details-meta-data-section {
  margin-top: 15px;
}

.details-meta-data-section .btn {
  margin-top: 5px;
}

.details-meta-data-section-header {
  font-weight: bold;
  float: left;
}

.details-meta-data-section-label {
  white-space: nowrap;
  min-width: 130px;
  float: left;
}

.details-meta-data-section-value {
  float: left;
}

.message-meta-data-section-header {
  font-weight: bold;
  float: left;
}

.message-meta-data-section-label {
  white-space: nowrap;
  min-width: 130px;
  float: left;
}

.text-error {
  color: #b94a48;
}

.message-meta-data-section-value {
  float: left;
}

.reference-details, .service-details {
  border-left: 1px solid rgb(211, 211, 211);
  border-bottom: 1px solid rgb(211, 211, 211);
  border-right: 1px solid rgb(211, 211, 211);
  background-color: white;
  padding-bottom: 15px;
}
.situation-details {
  background-color: white;
}

.situation-details .tab-content {
  padding-top: 0px;
}
.situation-details .nav-tabs {
  margin-bottom: 0px;
}

.controls-checkbox {
  margin-bottom: 5px;
}

.filter-checkbox span {
  padding-left: 5px;
}

.icon {
  width: 16px;
  height: 16px;
  background-position: top left;
}

.icon-download-fault {
  background-image: url("../images/icon-download-fault.png");
}
.icon-download-initial {
  background-image: url("../images/icon-download-initial.png");
}
.icon-retry {
  background-image: url("../images/icon-retry.png");
}
.icon-context {
  background-image: url("../images/icon-context.png");
}
.icon-properties {
  background-image: url("../images/icon-properties.png");
}

.icon-severity-low {
  background-image: url("../images/icon-warning-low.png");
}
.icon-severity-medium {
  background-image: url("../images/icon-warning-medium.png");
}
.icon-severity-high {
  background-image: url("../images/icon-warning-high.png");
}
.icon-severity-critical {
  background-image: url("../images/icon-warning-critical.png");
}

.table-actions {
  padding-left: 5px;
  padding-right: 5px;
}
.table-actions .icon {
  margin-left: 4px;
}

.sitwatch-notification {
  text-align: center;
  border-radius: 4px 4px 4px 4px;
  min-height: 30px;
  padding: 8px 15px;
  font-weight: bold;
  font-size: 13px;
}

.sitwatch-events {
  position: absolute;
  width: 350px;
  height: 500px;
  right: 20px;
  top: 55px;
  background-color: #fffff0;
  border: 1px solid rgb(211, 211, 211);
  border-radius: 2px;
  padding: 0px;
  box-shadow: 2px 2px 2px #AAA;
  overflow: auto;
}

.sitwatch-event {
  font-size: 11px;
  border-bottom: 1px solid rgb(211,211,211);
  overflow: hidden;
  padding: 10px;
}
.sitwatch-event:hover {
  background-color: #f6f6e8;
}
.sitwatch-event span {
  float: left;
}
.sitwatch-event .title {
  font-weight: bold;
}
.sitwatch-event .timestamp {
  float: right;
}
.sitwatch-event .icon {
  float: left;
  margin-right: 5px;
}
.sitwatch-event .subject {
  line-height: 12px; 
}

.call-trace-detail {
  padding: 19px;
  background-color: rgb(251, 250, 241);
  border: 1px solid rgb(227, 227, 227);
  border-radius: 4px 4px 4px 4px;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05) inset;
  margin-bottom: 10px;
}

.call-trace .tree li.leaf_li > span {
  cursor: pointer;
}
.call-trace .tree li.leaf_li > span:hover {
  background-color: #df8505;
  border: 1px solid #c67605;
  color: #fff;
}

